Modify the request parameter name

--- a/backend/fitness_centre/src/main/resources/templates/email_verification.html
+++ b/backend/fitness_centre/src/main/resources/templates/email_verification.html
@@ -27,11 +27,11 @@
         ">
 
     <!-- 顶部Banner：可放健身图片 -->
-    <div style="width: 100%; height: 265px; overflow: hidden;">
-      <img src="https://img.picui.cn/free/2025/03/12/67d09f07195bb.png"
-           alt="Banner"
-           style="width:100%; object-fit:cover;">
-    </div>
+<!--    <div style="width: 100%; height: 265px; overflow: hidden;">-->
+<!--      <img src="https://img.picui.cn/free/2025/03/12/67d09f07195bb.png"-->
+<!--           alt="Banner"-->
+<!--           style="width:100%; object-fit:cover;">-->
+<!--    </div>-->
 
     <!-- 标题和内容 -->
     <div style="padding: 20px;">
